--- a/src/views/Login/Login.sass
+++ b/src/views/Login/Login.sass
@@ -26,10 +26,12 @@ $white-gray: #e5e5e5
     .email
       margin: 0px 0px 30px 0px
       input
+        width: 27%
         height: 22px
     .password
       margin: 0px 0px 40px 0px
       input
+        width: 26.5%
         height: 22px
       span
         position: relative
